fix: about us description alignment

--- a/public/assets/master.css
+++ b/public/assets/master.css
@@ -2360,8 +2360,8 @@ body {
 
     .poolfund-flex {
         /* justify-content: center; */
-        margin-left: 20px;
-        margin-right: 20px;
+        margin-left: 16px;
+        /* margin-right: 20px; */
     }
 
     .poolfund-flex2 {
@@ -2762,6 +2762,9 @@ body {
     .strgth3-align {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        margin-left: 16px;
     }
 
     .strength-word1 {
